@@ -6,6 +6,7 @@
   fix AIX 5.3 support in configure (WestGrid)
   fixed crash when qrun issued on job with incomplete requeue
   added support for >= 4GB memory usage (GMX)
+  added more detailed error messages for missing user shell on mom
 
 1.2.0p4
 
